Fixed various bugs
- Fixed issue with row numbers in pattern going beyond pattern height
- Addressed some issues with explanations
- Fixed a margin error when using a lot of colors
- Fixed blurry lines on firefox

--- a/static/main.css
+++ b/static/main.css
@@ -129,7 +129,7 @@ ul.colors {
 	padding-left:0;
 }
 ul#pattern-colors {
-    margin-left:5em;
+    margin-left:7em;
 }
 ul.colors li {
 	display:block;
@@ -198,6 +198,10 @@ svg text {
     dominant-baseline: central;
     text-anchor: middle;
     fill:#333;
+}
+
+svg {
+    shape-rendering:crispEdges;
 }
 
 
